# Render-Layer

./: CMakeLists.txt  v1.h  v2.h  v3.h  v4.h  v5.h
approach/: main.cpp  test_open.cv.cpp
approach/Render/: cnn.h  derivednode.cpp  image_reader.cpp  node.h  tinyfiledialogs.cpp  tinyfiledialogs.h  v1.h  v2.h  v3.h  v4.h  v5.h
build_mingw/: CMakeCache.txt
cmake-bu/: CMakeCache.txt
